# Marco

./: .gitignore  .marco_settings.json  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  EXTRA_SYNTAX_IMPLEMENTATION.md  FEATURES.md  LICENSE  MARCO_USER_GUIDE.md  Marco.gschema.xml  README.md  UPDATE_SUMMARY.md  build.rs  cross-platform.md  extra_syntax_test.md  issue.md  marco-linux.code-workspace  marco-suite_0.1.0_amd64.deb  marco-windows.code-workspace  org.marco.editor.gschema.xml  rust-toolchain.toml  settings.ron  test.md  test_dialog.md  test_file_menu.md  test_selection_debug.md  test_selection_preservation.sh  test_selection_preservation_guide.sh
core/: Cargo.toml  README.md  build.rs
core/examples/: test_html_img.rs
core/src/: lib.rs
core/src/ast/: mod.rs  nodes.rs  traversal.rs
core/src/grammar/: block.rs  inline.rs  mod.rs  shared.rs
core/src/grammar/blocks/: cm_blockquote.rs  cm_fenced_code_block.rs  cm_heading.rs  cm_html_blocks.rs  cm_indented_code_block.rs  cm_link_reference.rs  cm_list.rs  cm_paragraph.rs  cm_setext_heading.rs  cm_thematic_break.rs  gfm_table.rs  mod.rs
core/src/grammar/inlines/: cm_autolink.rs  cm_backslash_escape.rs  cm_code_span.rs  cm_dash_strikethrough.rs  cm_emphasis.rs  cm_image.rs  cm_inline_html.rs  cm_line_breaks.rs  cm_link.rs  cm_mark.rs  cm_strikethrough.rs  cm_strong.rs  cm_subscript.rs  cm_subscript_arrow.rs  cm_superscript.rs  mod.rs
core/src/intelligence/: catalog.rs  mod.rs  toc.rs
core/src/intelligence/analysis/: diagnostics.rs  lint.rs
core/src/logic/: buffer.rs  cache.rs  layoutstate.rs  logger.rs  mod.rs  paths.rs  swanson.rs  utf8.rs
core/src/logic/loaders/: font_loader.rs  icon_loader.rs  theme_loader.rs
core/src/lsp/: completion.rs  diagnostics.rs  highlights.rs  hover.rs  mod.rs
core/src/parser/: ast.rs  block_parser.rs  gfm_admonitions.rs  inline_parser.rs  mod.rs  position.rs  shared.rs
core/src/parser/blocks/: cm_blockquote_parser.rs  cm_fenced_code_block_parser.rs  cm_heading_parser.rs  cm_html_blocks_parser.rs  cm_indented_code_block_parser.rs  cm_link_reference_parser.rs  cm_list_parser.rs  cm_paragraph_parser.rs  cm_thematic_break_parser.rs  gfm_footnote_definition_parser.rs  gfm_table_parser.rs  marco_sliders_parser.rs  marco_tab_blocks_parser.rs  mod.rs  shared.rs
core/src/parser/inlines/: cm_autolink_parser.rs  cm_backslash_escape_parser.rs  cm_code_span_parser.rs  cm_dash_strikethrough_parser.rs  cm_emphasis_parser.rs  cm_entity_reference_parser.rs  cm_image_parser.rs  cm_inline_html_parser.rs  cm_line_breaks_parser.rs  cm_link_parser.rs  cm_mark_parser.rs  cm_reference_link_parser.rs  cm_strikethrough_parser.rs  cm_strong_parser.rs  cm_subscript_arrow_parser.rs  cm_subscript_parser.rs  cm_superscript_parser.rs  gfm_autolink_literal_parser.rs  marco_emoji_shortcode_parser.rs  mod.rs  shared.rs  text_parser.rs
core/src/paths/: core.rs  dev.rs  install.rs  marco.rs  mod.rs  polo.rs  shared.rs
core/src/paths/platform/: linux.rs  mod.rs  windows.rs
core/src/render/: base_css.rs  code_languages.rs  html.rs  markdown.rs  mod.rs  plarform_mentions.rs  preview_document.rs
core/tests/: autolink_highlighting.rs  commonmark_gaps_integration.rs  extended_definition_lists_integration.rs  extended_heading_ids_integration.rs  gfm_admonitions_integration.rs  gfm_autolink_literals_integration.rs  gfm_footnotes_integration.rs  gfm_table_integration.rs  gfm_tasklist_integration.rs  heading_anchor_links_integration.rs  highlighting_integration.rs  html_autolink_integration.rs  html_block_single_line_integration.rs  marco_emoji_shortcode_integration.rs  marco_headerless_table_integration.rs  marco_inline_footnotes_integration.rs  marco_sliders_integration.rs  marco_tab_blocks_integration.rs  platform_mentions_integration.rs
debug/: Cargo.toml  test_cases.toml
debug/src/: grammar_visualizer.rs  main.rs
debug/src/results/: benchmark_results.md  grammar_tree.html  test_results.html  test_results.md
marco/: Cargo.toml  build.rs  marco.rc
marco-core/: Cargo.toml  build.rs
marco-core/src/render/: preview_document.rs
marco-core/tests/: gfm_admonitions_integration.rs  gfm_autolink_literals_integration.rs  gfm_tasklist_integration.rs  html_block_single_line_integration.rs  marco_emoji_shortcode_integration.rs
marco-shared/: Cargo.toml  build.rs
marco-shared/src/: lib.rs
marco-shared/src/assets/: settings_org.ron
marco-shared/src/logic/: buffer.rs  crossplatforms.rs  layoutstate.rs  mod.rs  print_css.rs  swanson.rs  text_completion.rs
marco-shared/src/paths/: marco.rs  mod.rs  polo.rs  shared.rs
marco/src/: beacon.rs  footer.rs  lib.rs  main.rs  menu.rs  theme.rs  toolbar.rs
marco/src/components/: layout_manager.rs  mod.rs
marco/src/logic/: logger_init.rs  mod.rs  panic_hook.rs  rtl.rs  settings_thread.rs  signal_handlers.rs  signal_manager.rs  split_state.rs  syntax_highlighter.rs  tables.rs  window_state.rs
marco/src/ui/: mod.rs  popover_state.rs  splitview.rs  titlebar.rs  toc_panel.rs  zoom_overlay.rs
marco/src/ui/css/: list.rs  (+17 more)
marco_core/: Cargo.toml  build.rs
marco_core/src/: lib.rs
marco_core/src/components/: mod.rs  syntax_highlighter.rs
marco_core/src/logic/: api.rs  mod.rs  paths.rs
marco_core/tests/: lists_comprehensive.rs  phase7_references_comprehensive.rs
polo/: Cargo.toml  DIALOG_CSS_2025-10-07.md  README.md  build.rs
polo/src/: main.rs
polo/src/components/: compass.rs  dialog.rs  menu.rs  mod.rs  utils.rs
servo_runner/: Cargo.toml  README.md
servo_runner/src/: event_loop_waker.rs  lib.rs  rendering.rs  webview.rs
tests/grammar_workbench/: Cargo.toml  README.md  convert_toml_to_json.py  spec_comprehensive.json  test_cases.toml  test_config.json  testcasestoml.backup  toml_to_json.py
tests/grammar_workbench/src/: grammar_visualizer.rs  main.rs
tools/tool_runner/: Cargo.toml
tools/tool_runner/doc/: syntaxvalidation.md
tools/tool_runner/files/: ast.ron  markdown.pest  syntax.ron
tools/tool_runner/src/: errors.rs  lib.rs  loader.rs  main.rs  types.rs  validate.rs
tools/tool_runner/tests/: prop_tests.proptest-regressions  prop_tests.rs
(+877 files in other folders)
