[workspace]
resolver = "2"
members = ["core", "marco", "polo"]

# Shared workspace dependencies
[workspace.dependencies]
# Core parsing and serialization (no UI)
nom = "8.0.0"                        # Parser combinator library
nom_locate = "5.0.0"                 # Position tracking for nom parsers
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
log = "0.4.29"
chrono = { version = "0.4.43", features = ["serde"] }
tempfile = "3.24.0"
emojis = "0.8.0"
fontconfig = "0.10.0"
dirs = "6.0.0"
moka = { version = "0.12.12", features = ["sync"] }  # High-performance caching
unicode-normalization = "0.1.25"                  # Unicode NFC normalization for consistent parsing
htmlescape = "0.3.1"                              # HTML entity encoding/decoding
syntect = "5.3.0"                    # Syntax highlighting

# UI dependencies (GTK4 ecosystem)
gtk4 = "0.10.3"
glib = "0.21.5"
gio = "0.21.5"
sourceview5 = "0.10.0"
dark-light = "2.0.0"
librsvg = "2.60"
cairo-rs = "0.21.5"
gdk-pixbuf = "0.21.5"

# Platform-specific WebView dependencies
# Linux: webkit6 (GTK4-native WebKit)
webkit6 = "0.5.0"
# Windows: wry (cross-platform WebView wrapper)
wry = { version = "0.54.1", default-features = false, features = ["os-webview", "protocol"] }
tao = "0.34.5"
gdk4-win32 = "0.10.3"
raw-window-handle = "0.6.2"

# Test dependencies
clap = { version = "4.5.54", features = ["derive"] }
similar = { version = "2.7", features = ["inline", "unicode"] }
colored = "3.0.0"
criterion = "0.8.1"
rand = "0.9.2"
serial_test = "3.3.1"

# Profile optimizations
[profile.dev]
opt-level = 0
debug = true
incremental = true
overflow-checks = true
split-debuginfo = 'unpacked'

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1

# CI on Ubuntu 24.04 can fail to compile `ashpd 0.10.x` (pulled in by
# `dark-light 2.0.0`) due to stricter trait bounds in newer `zbus`/`zvariant`.
# Upstream `dark-light` has already removed the `ashpd` dependency on its main
# branch, but hasn't published a new crates.io release yet.
#
# To keep CI reproducible while we wait for an upstream release, we patch
# `dark-light` to a pinned git revision.
[patch.crates-io]
dark-light = { git = "https://github.com/rust-dark-light/dark-light", rev = "0f18d2fbcaa5d1c175db8aae7d53428988d7e961" }
