[package]
name = "core"
version = "0.15.1"
edition = "2021"
authors = ["Kim Skov Rasmussen"]
description = "Core"
license = "MIT"
rust-version = "1.92.0"

[[test]]
name = "test_suite"
path = "../tests/test_suite.rs"
harness = false  # Disable test harness to use custom main() with clap CLI

[dependencies]
# Core parsing dependencies (nom-based)
nom = { workspace = true }
nom_locate = { workspace = true }

# Serialization
ron = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
log = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
fontconfig = { workspace = true }
dirs = { workspace = true }
moka = { workspace = true }
unicode-normalization  = { workspace = true }
htmlescape = { workspace = true }
syntect = { workspace = true }
emojis = { workspace = true }

[build-dependencies]
serde_json = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
clap = { workspace = true }
