[package]
name = "marco-debug"
version = "0.1.0"
edition = "2021"
description = "Debug and testing tools for Marco grammar parser"

[[bin]]
name = "grammar-test"
path = "src/main.rs"

[dependencies]
# Direct dependencies for the debug tool
pest = "2.8.1"
pest_derive = "2.8.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
# ASCII tree visualization for better parse tree display
ascii_tree = "0.1.1"
escape_string = "0.1.1"
# Date/time for file generation timestamps
chrono = { version = "0.4", features = ["serde"] }
