[package]
name = "marco-core"
version = "1.0.2"
edition = "2021"
authors = ["Kim Skov Rasmussen"]
description = "nom-based Markdown parser, HTML renderer, and intelligence features (highlights, diagnostics, completions) for the Marco editor."
license = "MIT"
rust-version = "1.94.1"
repository = "https://github.com/Ranrar/Marco"
homepage = "https://github.com/Ranrar/Marco"
keywords = ["markdown", "parser", "commonmark", "renderer", "nom"]
categories = ["parsing", "text-processing", "markdown"]
readme = "../README.md"
exclude = [
    "tests/",
    "../tests/",
    "../documentation/",
    "../build/",
    "../assets/",
    "../log/",
]

[[test]]
name = "test_suite"
path = "../tests/test_suite.rs"
harness = false  # Disable test harness to use custom main() with clap CLI

[dependencies]
# Core parsing dependencies (nom-based)
nom = { workspace = true }
nom_locate = { workspace = true }

# Serialization
ron = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
log = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
dirs = { workspace = true }
moka = { workspace = true }
unicode-normalization  = { workspace = true }
htmlescape = { workspace = true }
syntect = { workspace = true }
emojis = { workspace = true }
katex-rs = { workspace = true }
mermaid-rs-renderer = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
fontconfig = { workspace = true }

[build-dependencies]
serde_json = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
clap = { workspace = true }
