[package]
name = "marco"
version = "0.14.0"
edition = "2021"
authors = ["Kim Skov Rasmussen"]
description = "Marco - A Markdown Composer"
license = "MIT"
default-run = "marco"
rust-version = "1.92.0"

[lib]
# The `marco` crate is GTK/UI heavy; most docs contain illustrative snippets that
# are not meant to compile or run as doctests.
doctest = false

[features]
default = []

[[bin]]
name = "marco"
path = "src/main.rs"

[dependencies]
# Core library
core = { path = "../core" }

# UI dependencies
gtk4 = { workspace = true }
glib = { workspace = true }
gio = { workspace = true }
sourceview5 = { workspace = true }
webkit6 = { workspace = true }
dark-light = { workspace = true }

# Utilities (also in core but needed here)
anyhow = { workspace = true }
log = { workspace = true }
syntect = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
tempfile = { workspace = true }
