[package]
name = "marco"
version = "0.15.0"
edition = "2021"
authors = ["Kim Skov Rasmussen"]
description = "Marco - A Markdown Composer"
license = "MIT"
default-run = "marco"
rust-version = "1.92.0"

[lib]
# The `marco` crate is GTK/UI heavy; most docs contain illustrative snippets that
# are not meant to compile or run as doctests.
doctest = false

[features]
default = []

[[bin]]
name = "marco"
path = "src/main.rs"

[dependencies]
# Core library
core = { path = "../core" }

# Utilities
log = { workspace = true }
syntect = { workspace = true }

# UI dependencies (common)
gtk4 = { workspace = true }
glib = { workspace = true }
gio = { workspace = true }
sourceview5 = { workspace = true }
dark-light = { workspace = true }
# SVG rendering and Cairo required for high-quality window control icons
librsvg = { workspace = true }
cairo-rs = { workspace = true }
# Temp files for detached preview handling
tempfile = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
webkit6 = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
wry = { workspace = true }
tao = { workspace = true }
gdk4-win32 = { workspace = true }
raw-window-handle = { workspace = true }
# Ctrl-C handler for graceful shutdown on Windows
ctrlc = "3.5.1"

[dev-dependencies]
serial_test = { workspace = true }
tempfile = { workspace = true }
