[package]
name = "marco_core"
version = "0.1.0"
edition = "2021"
authors = ["Kim Skov Rasmussen"]
description = "Marco Core - Markdown parsing and rendering engine"
license = "MIT OR Apache-2.0"

[dependencies]
# Core parsing dependencies
pest = { workspace = true }
pest_derive = { workspace = true }

# Serialization
ron = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
regex = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
emojis = { workspace = true }
fontconfig = { workspace = true }
dirs = { workspace = true }
lru = { workspace = true }

# Syntax highlighting (needed for code blocks)
syntect = { workspace = true }
syntect-assets = { workspace = true }

[build-dependencies]
serde_json = { workspace = true }

[dev-dependencies]
pest_ascii_tree = { workspace = true }
serial_test = { workspace = true }
