[package]
name = "polo"
version = "0.15.0"
edition = "2021"
authors = ["Kim Skov Rasmussen"]
description = "Polo - Markdown Viewer"
license = "MIT"
rust-version = "1.92.0"

[dependencies]
# Core library
core = { path = "../core" }

# Utilities
log = { workspace = true }

# UI dependencies (common)
gtk4 = { workspace = true }
glib = { workspace = true }
gio = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
webkit6 = { workspace = true }

[target.'cfg(windows)'.dependencies]
wry = { workspace = true }
tao = { workspace = true }