[package]
name = "servo-runner"
version = "0.0.4"
edition = "2021"
authors = ["Kim Skov Rasmussen"]
description = "GTK4 integration for Servo web engine"
license = "MIT"

[dependencies]
# GTK4
gtk = { workspace = true }
glib = { workspace = true }
gio = { workspace = true }

# Servo
servo = { git = "https://github.com/servo/servo.git", rev = "b73ae025690cce16185520ea88a6df162fc1298d", package = "libservo" }
embedder_traits = { git = "https://github.com/servo/servo.git", rev = "b73ae025690cce16185520ea88a6df162fc1298d" }
compositing_traits = { git = "https://github.com/servo/servo.git", rev = "b73ae025690cce16185520ea88a6df162fc1298d" }
servo_url = { git = "https://github.com/servo/servo.git", rev = "b73ae025690cce16185520ea88a6df162fc1298d" }
euclid = "0.22"
rustls = { version = "0.23", features = ["aws_lc_rs"] }
dpi = "0.1"

# OpenGL
surfman = { version = "0.11.0", features = ["chains", "sm-angle", "sm-angle-default"] }
gl = "0.14.0"

# Utilities
log = { workspace = true }
url = "2.3"
image = "0.25"
