[package]
name = "marco-grammar-test"
version = "0.1.0"
edition = "2021"
description = "A real-time testing and validation platform that uses the Marco engine"

[[bin]]
name = "grammar-test"
path = "src/main.rs"

[dependencies]
# Use the main marco crate
marco = { path = "../.." }
# Direct dependencies for the debug tool
pest = "2.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# ASCII tree visualization for better parse tree display
ascii_tree = "0.1.1"
escape_string = "0.1.1"
# Date/time for file generation timestamps
chrono = { version = "0.4", features = ["serde"] }
