[package]
name = "tool_runner"
version = "0.1.0"
edition = "2021"

[dependencies]

ron = "0.8"
regex = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
pest = "2"
pest_meta = "2.8"
thiserror = "1.0"
anyhow = "1.0"
serde_json = "1.0"

[dev-dependencies]
proptest = "1.0"
